manifests/environments/prod/apps/service/deployment-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service
spec:
  template:
    spec:
      containers:
        - name: service
