manifests/environments/prod/apps/service/ingress-hostname.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: service
spec:
  hostnames:
    - dialogporten.prod.dis-core.altinn.cloud
